AM_CFLAGS= -Wall $(CFLAGS)

bin_PROGRAMS = cash
cash_SOURCES = autocomplete.c btree.c builtin_c.c  cash.c cash_readline.c do_command.c history.c interpreter.c linkedcl.c linkedl.c shell.c signals.c cparser/about_errors.c cparser/about_execution.c cparser/about_identification.c cparser/about_operations.c cparser/about_skipping.c cparser/about_variables.c cparser/cparser.c

